# rk2

./: CMakeLists.txt  CPackConfig.cmake
.github/workflows/: CI.yml  pubication.yml  testing.yml
src/: Interpreter.cpp  Interpreter.pro  main.cpp
src/tests/: Interpreter.cc  Mock_TerminalExpression_Minus.h  Mock_TerminalExpression_Number.h  Mock_TerminalExpression_Plus.h  TerminalExpression_Minus.cc  TerminalExpression_Number.cc  TerminalExpression_Plus.cc  main.cc
